Add link to GitHub repo in navbar

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="syntax.html">Syntax Reference</a>
                     </li>
+                    <a class="nav-link" href="https://github.com/comptech-software/comptech-software.github.io">
+                        <i class="bi bi-github"></i>
+                    </a>
                 </ul>
             </div>
         </div>
