--- a/syntax.html
+++ b/syntax.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="syntax.html">Syntax Reference</a>
                     </li>
+                    <a class="nav-link" href="https://github.com/comptech-software/comptech-software.github.io">
+                        <i class="bi bi-github"></i>
+                    </a>
                 </ul>
             </div>
         </div>
