--- a/lessons.html
+++ b/lessons.html
@@ -27,13 +27,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" aria-current="page" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Lessons </a>
-                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#unit-1">Unit 1</a></li>
-                            <li><a class="dropdown-item" href="#unit-2">Unit 2</a></li>
-                            <li><a class="dropdown-item" href="#unit-3">Unit 3</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="lessons.html">Lessons</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="syntax.html">Syntax Reference</a>
