--- a/syntax.html
+++ b/syntax.html
@@ -26,13 +26,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="lessons.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Lessons </a>
-                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="lessons.html#unit-1">Unit 1</a></li>
-                            <li><a class="dropdown-item" href="lessons.html#unit-2">Unit 2</a></li>
-                            <li><a class="dropdown-item" href="lessons.html#unit-3">Unit 3</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="lessons.html">Lessons</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="syntax.html">Syntax Reference</a>
