--- a/lessons.html
+++ b/lessons.html
@@ -57,8 +57,13 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
                         <div class="accordion-body">
-                            <p><strong>This is a placeholder for a video.</strong><p>
-                            <p>This is an overview of which Python elements this course will cover.</p>
+                            <div style="padding:69.73% 0 0 0;position:relative;">
+                                <iframe src="https://player.vimeo.com/video/558816246?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Unit 1 Intro"></iframe>
+                            </div>
+                            <script src="https://player.vimeo.com/api/player.js"></script>
+                            <br />
+
+                            <p>This is an overview of the Python elements covered in this course.</p>
                             <ul>
                                 <li>Printing</li>
                                 <li>Variables</li>
@@ -180,6 +185,10 @@
                                 <li>Install these VSCode extensions: "Python", "ev3dev-browser", "LEGO&reg; MINDSTORMS&reg; EV3 MicroPython"</li>
                                 <li>Connect to EV3 using the “EV3DEV DEVICE BROWSER” tab near the bottom-left of VSCode in the “Explorer” view</li>
                             </ol>
+
+                            <div class="alert alert-secondary" role="alert">
+                                😕 Unfortunately, the video we planned for this lesson was never produced. Sorry!
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -397,6 +406,10 @@
                     <div id="collapseEleven" class="accordion-collapse collapse" aria-labelledby="headingEleven">
                         <div class="accordion-body">
                             <p>In this lesson, you will learn how to connect to the CrowPi and use it to execute programs.</p>
+
+                            <div class="alert alert-secondary" role="alert">
+                                😕 Unfortunately, the video we planned for this lesson was never produced. Sorry!
+                            </div>
                         </div>
                     </div>
                 </div>
