Add a title to each lesson unit

--- a/lessons.html
+++ b/lessons.html
@@ -47,7 +47,7 @@
         </div>
         
         <div class="row">
-            <h1 id="unit-1">Unit 1</h1>
+            <h1 id="unit-1">Unit 1: Python Basics</h1>
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
@@ -155,7 +155,7 @@
             </div>
         </div>
         <div class="row">
-            <h1 id="unit-2">Unit 2</h1>
+            <h1 id="unit-2">Unit 2: The LEGO EV3</h1>
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFour">
@@ -395,7 +395,7 @@
             </div>
         </div>
         <div class="row">
-            <h1 id="unit-3">Unit 3</h1>
+            <h1 id="unit-3">Unit 3: The CrowPi</h1>
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingEleven">
