--- a/lessons.html
+++ b/lessons.html
@@ -300,7 +300,7 @@
 <!--                        -->colors = ("unknown", "black", "blue", "green", "yellow", "red", "white", "brown")<!--
                          --></code></pre>
 
-                            <p>Lastly, create a loopr that translates the sensor's numerical output to one of the colors we just defined.</p>
+                            <p>Lastly, create a loop that translates the sensor's numerical output to one of the colors we just defined.</p>
                             <pre class="rounded language-python"><code><!--
                             -->ts = TouchSensor()
 
