Add additional resources to lessons page

--- a/lessons.html
+++ b/lessons.html
@@ -656,6 +656,16 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <h1>Additional Resources</h1>
+            
+            <p><strong>Need help? Want more practice?</strong> You might find the following documentation helpful.</p>
+            <div class="list-group">
+                <a class="list-group-item bg-dark text-info" href="https://sites.google.com/site/ev3devpython/learn_ev3_python/leds">EV3dev Python Guide</a>
+                <a class="list-group-item bg-dark text-info" href="https://www.elecrow.com/download/product/SES14002K/CrowPi_Python_Lessons.pdf">CrowPi Lessons</a>
+                <a class="list-group-item bg-dark text-info" href="https://pybricks.com/ev3-micropython/index.html">EV3 MicroPython with PyBricks</a>
+            </div>
+        </div>
     </div>
 
     <script src="prism/prism.js"></script>
