--- a/lessons.html
+++ b/lessons.html
@@ -42,8 +42,8 @@
     </nav>
 
     <div class="container" style="margin-top: 2em;">
-        <div class="alert alert-warning" role="alert">
-            This page isn't quite finished yet, but be sure to check back in the future!
+        <div class="alert alert-dark" role="alert">
+            Want to make this course even better? Feel free to fork <a href="https://github.com/comptech-software/comptech-software.github.io" class="alert-link">our GitHub repository</a> and change the code as you see fit.
         </div>
         
         <div class="row">
@@ -186,7 +186,7 @@
                                 <li>Connect to EV3 using the “EV3DEV DEVICE BROWSER” tab near the bottom-left of VSCode in the “Explorer” view</li>
                             </ol>
 
-                            <div class="alert alert-secondary" role="alert">
+                            <div class="alert alert-dark" role="alert">
                                 😕 Unfortunately, the video we planned for this lesson was never produced. Sorry!
                             </div>
                         </div>
@@ -407,7 +407,7 @@
                         <div class="accordion-body">
                             <p>In this lesson, you will learn how to connect to the CrowPi and use it to execute programs.</p>
 
-                            <div class="alert alert-secondary" role="alert">
+                            <div class="alert alert-dark" role="alert">
                                 😕 Unfortunately, the video we planned for this lesson was never produced. Sorry!
                             </div>
                         </div>
