Change breakpoints of cards in index.html

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <h1>Major Obstacles</h1>
             </div>
 
-            <div class="row row-cols-2 row-cols-md-3">
+            <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col">
                     <div class="card bg-dark text-white">
                         <div class="card-body">
