Fix grammar in index.html

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div class="card bg-dark text-white">
                         <div class="card-body">
                             <h5 class="card-title">More Robotics Functionality</h5>
-                            <p class="card-text">Initially, we planned to add a fourth unit to our course, in which the EV3 and CrowPi to interact with each other. Unfortunately, this idea proved too difficult to implement while still making it easy understand for other students.</p>
+                            <p class="card-text">Initially, we planned to add a fourth unit to our course in which the EV3 and CrowPi would interact with each other. Unfortunately, this idea proved too complex to reliably implement while still being simple enough for students to understand.</p>
                         </div>
                     </div>
                 </div>
